--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-protezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
               <a class="dropdown-item" href="terd-porcsebészet.html">Térd porcsebészet</a>              
             </div>
