--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -60,7 +60,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-protezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
               <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>              
             </div>
@@ -122,7 +122,7 @@
         <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő 
 	injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, 
 	fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás 
-	esetén, ha a fent említettek nem hoznak javulást, akkor <a href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
+	esetén, ha a fent említettek nem hoznak javulást, akkor <a class="atmenet" href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
     </div>
 
     <div class="col-lg-6 img-thumbnail">
