--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
+  
   
   <!-- Bootstrap core CSS  -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis-csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-protezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
               <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>              
             </div>
@@ -163,12 +163,12 @@
       </div>
       <div class="col-lg-6">
         
-        <p><a href="bemutatkozas.html">Dr. Ganczer Péter</a> ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong>.</p>
+        <p><a class="atmenet" href="bemutatkozas.html">Dr. Ganczer Péter</a> ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong>.</p>
         <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
            Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
            végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong>
-           A szekszárdi Kórház <strong>ortopédiai osztályának, részlegvezető főorvosaként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
-           vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót valamint térdprotézis beültetést. Olyan számítógépes tervezőprogram segítségével, 
+           A szekszárdi Kórház <strong>ortopédiai osztályának vezetőjeként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
+           vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. Mindezt olyan új számítógépes tervezőprogram segítségével,  
            mellyel <strong>jobb eredményt és hosszabb protézis élettartamot lehet elérni. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
        </div>
       <div class="col-lg-12">
@@ -230,7 +230,7 @@
         <h2 class="kozepre separator">Magánrendelések</h2>
       </div>
       <div class="col-lg-4">
-              <h3 class="open-hours">Szekszárd </h3>
+              <h3 class="open-hours atmenet"><a href="kapcsolat.html">Szekszárd</a> </h3>
               <p>Sub Rosa Egészségközpont,<br> 
                 Szekszárd, Kadarka u. 72.<br>
                 (2020. október 1-jétől) <br>
@@ -240,13 +240,13 @@
       </div>
 
       <div class="col-lg-4">
-        <h3 class="open-hours">Baja </h3>
+        <h3 class="open-hours atmenet"><a href="kapcsolat.html">Baja</a> </h3>
         <p>Baja, Alkotmány u. 1.<br>
           minden kedden 16.00-21.00 óráig<br>
         </p>
       </div> 
       <div class="col-lg-4">
-          <h3 class="open-hours">Paks </h3>
+          <h3 class="open-hours atmenet"><a href="kapcsolat.html">Paks</a> </h3>
           <p>Paks, Váczi Mihály u. 1.<br>
             minden páratlan hét hétfőn 16.00-21.00 óráig<br>
           </p>        
