--- a/izomatvagas-nelkul.html
+++ b/izomatvagas-nelkul.html
@@ -54,7 +54,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-protezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
               <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>         
             </div>
@@ -103,7 +103,10 @@
     <div class="col-lg-6">
       <h2>ELÜLSŐ (ANTERIOR) FELTÁRÁS csípőprotézis műtét esetén</h2> 
       <p>Mi a minimál invazív csípőprotézis?</p>
-      <p>Ennél az eljárásnál a protézis a lágyékhajlatban ejtett kis metszésen kerül beültetésre úgy, hogy a csípő körüli izmok érintetlenül maradnak. Az elülső csípőprotézis-műtét során az implantátum beültetése - a comb elülső részén - a fehérnemű vonalában ejtett kis metszésből az izmok közötti résen keresztül történik. Az izmot nem vágjuk el, csak széthúzzuk a protézis beültetéséhez. Ez egy valóba minimálisan invazív (minimális szöveti károsodással járó) műtéti megoldás, mivel a csípőt körülvevő izmok teljes megkímélésével jár. </p>
+      <p>Ennél az eljárásnál a protézis a lágyékhajlatban ejtett kis metszésen kerül beültetésre úgy, hogy a csípő körüli izmok érintetlenül 
+        maradnak. Az elülső csípőprotézis-műtét során az implantátum beültetése a comb elülső részén ejtett kis metszésből az 
+        izmok közötti résen keresztül történik. Az izmot nem vágjuk el, csak széthúzzuk a protézis beültetéséhez. Ez egy valóba minimálisan invazív 
+        (minimális szöveti károsodással járó) műtéti megoldás, mivel a csípőt körülvevő izmok teljes megkímélésével jár. </p>
       <p>Számos előnye van:</p>
           <ul>
             <li>kisebb a szöveti sérülés</li>
@@ -113,8 +116,12 @@
             <li>a protézis ficamának gyakorisága alacsonyabb az egyéb műtéti beavatkozásokhoz képest, mert az izmok azonnal működnek</li>
             <li>az operált végtag a műtét napján már teljes testsúllyal terhelhető</li>
           </ul>
-        <p>A módszert több éve alkalmazzák Európában kimagasló eredménnyel. Magyarország harmadikként kezdte meg évekkel ezelőtt a mini-invazív technikával történő csípőprotézis beültetés oktatását Pest megyében. Ez a feltárási technika minden szempontból precíz munkát és tervezést igényel, mellyel műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető. </p>
-        <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/gyorsabb-gyogyulas.jpg" alt="Gyorsabb gyógyulás csípőprotézis">
+        <p>A módszert több éve alkalmazzák Európában kimagasló eredménnyel. Magyarország harmadikként kezdte meg évekkel ezelőtt a mini-invazív 
+          technikával történő csípőprotézis beültetés oktatását Pest megyében. Ortopédiai osztályunkon 2014 óta alkalmazzuk ezt a feltárási technikát, 
+          mely minden szempontból precíz munkát és tervezést igényel. Az <a class="atmenet" href="www.emineo.hu"> Emineo magánklinikán</a>  elérhető a Corin OPS rendszer, 
+          (Optimized Positioning System) melynek lényege, hogy ct és röntgen analízis alapján a beteg mozgásához és anatómiai adottságához igazítjuk a 
+          protézist. Ezzel az eljárással műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető.  </p>
+        <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/Optimized-Positioning-System.jpg" alt="Mozgáshoz és anatómiához igazított protézis.">
         <p><strong>Sokkal gyorsabb a gyógyulás!
           A beteg akár 2 hét után visszatérhet fájdalommentes életéhez!
           </strong></p>
