--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -61,7 +61,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
               <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
-              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="terd-protezis-csere.html">Térd protézis csere - revisios </a>
               <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
               <a class="dropdown-item" href="terd-porcsebeszet.html">Térd porcsebészet</a>           
             </div>
@@ -109,7 +109,7 @@
 
     <div class="col-lg-6">
       <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok. 20 éve dolgozom szakterületemen, mely elsősorban <strong>térd</strong> /Primer és revisios protézis beültetés, elülső anatómiai szalagpótlás/, <strong>csípő</strong> /minimál invazív protézis beültetés, revisios műtétek/ és <strong>vállsebészet</strong> /arthroscopos Bankart műtét, arthroscopos rotátor köpeny rekonstrukció/. </p>
-      <p>A Pécsi Orvostudományi Egyetemen szereztem diplomát 2000-ben. Innen kerültem a Tolna Megyei Balassa János Kórház ortopédiai osztályára, ahol kilenc évet töltöttem. Majd újabb kilenc évet a baleseti sebészeti osztályon dolgoztam. Emellett lehetőségem volt Bonyhádon és Pakson 1 napos sebészeti tevékenységet végeznem. <strong>2019. év eleje óta a szekszárdi ortopédia, részlegvezető főorvosi teendőit látom el.</strong> </p>
+      <p>A Pécsi Orvostudományi Egyetemen szereztem diplomát 2000-ben. Innen kerültem a Tolna Megyei Balassa János Kórház ortopédiai osztályára, ahol kilenc évet töltöttem. Majd újabb kilenc évet a baleseti sebészeti osztályon dolgoztam. Emellett lehetőségem volt Bonyhádon és Pakson 1 napos sebészeti tevékenységet végeznem. <strong>2019. év eleje óta a szekszárdi ortopédia osztályának vezetői teendőit látom el.</strong> </p>
       <p>Eddigi pályám során mindig vonzottak az új technológiák, innovációk bevezetése, mellyel <strong>célom, hogy a betegek gyógyulását megkönnyítsük és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong> Ennek megfelelően a szekszárdi kórházban elsőként végeztünk arthroscopos elülső anatómiai keresztszalag pótlást, vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. </p>
     </div>
     <div class="col-lg-6">
@@ -119,7 +119,7 @@
     <div class="col-lg-12">
       <p>2019. novemberétől pedig, a megyei kórházak közül elsőként osztályunkon végzünk térdprotézis beütetéseket, hosszú alsó végtagi RTG alapján. Olyan számítógépes tervezőprogram segítségével végezzük, mellyel pontosabb beültetést, jobb eredményt és hosszabb protézis élettartamot tudunk elérni. </p>
       <p><strong>A korábbi 80 %-os műtéti eredményességet így 95%-ra tudjuk tervezni.</strong> Amennyiben a beteg anatómiai adottságai lehetővé teszik a protézis beültetést <strong>minimál invazív technikával</strong> végezzük mind csípő /minimál invazív elülső/, mind térd /mini midvastus, subvastus feltárás/ esetében. Így <strong>a kórházban töltött idő jelentősen lerövidül</strong>, betegeink gyorsabb rehabilitációs időre számíthatnak, jóval korábban térhetnek vissza életükhöz/munkájukhoz. </p>
-      <p><strong>Magán műtéteimet a budapesti Emineo magánklinikán végzem</strong>, ahol a fentieken túl lehetőség van térdprotézis beültetésnél az egyéni, MR alapján készült sablonnal történő protézis beültetésre, illetve csípőprotézis esetében a mozgásanalízisen alapuló beültetésre, melyek még jobb eredményt biztosítanak. </p>
+      <p><strong>Magán műtéteimet a budapesti <a class="atmenet" href="www.emineo.hu">Emineo magánklinikán</a> végzem</strong>, ahol a fentieken túl lehetőség van térdprotézis beültetésnél az egyéni, MR alapján készült sablonnal történő protézis beültetésre, illetve csípőprotézis esetében a mozgásanalízisen alapuló beültetésre, melyek még jobb eredményt biztosítanak. </p>
       <h2>Tagságok/képzések:</h2>
       <p>A Magyar Ortopéd Társaság tagja vagyok. </p>
       <p>A hazai kongresszusok mellett rendszeresen veszek részt külföldi kongresszusokon és tanulmányutakon: AO Recon kurzusok, ausztriai Stolzalpei Klinikán térdkurzusok.</p>
