--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <title>Ortopédiai műtétk - Dr. Ganczer Péter ortopéd sebész</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Megbízható ortopéd sebészt keres Tolna megyében? Csípő, váll és térdsebészet a legújabb technológiával.">
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="robots" content="noindex, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   
   <link rel="canonical" href="https://www.drganczer.hu/404/" />
   <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
@@ -89,8 +89,8 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">404
-      <small>A keresett oldal nem található...</small>
+    <h1 class="mt-4 mb-3">Opps...!!!
+      <small>A keresett oldal valamiért nem található, elnézését kérem a kellemetlenségért!...</small>
     </h1>
 
     <ol class="breadcrumb">
