--- a/arthroscopos-terd.html
+++ b/arthroscopos-terd.html
@@ -110,10 +110,10 @@
         <p>Az elülső keresztszalag szakadások közel 80 százaléka valamilyen sporttevékenység során keletkezik. Pácienseink többsége a 15-50 év közötti korosztályból kerül ki. Gyakori ok, hogy a túl keményre állított síkötés nem old le, hogy a labdarúgó lábára szabálytalanul csúsznak be, vagy a kosárlabdázót a levegőben meglökik, és rosszul érkezik a talajra.</p>
           <ul>
             <li>A műtét során a laparoscopos módszerhez hasonlóan 2-3 kis lyuk metszésével és segítségével az ízületi tok átvágása nélkül tudunk behatolni csőkamerával a térdízületbe. Így tudunk könnyen dolgozni a térdben. A beavatkozást altatással vagy gerincérzéstelenítéssel végezzük. Így minimálisra csökkenthető a beteg fájdalomérzete és akár 1 napos kórházi tartózkodást követően a beteg hazatérhet. </li>
-            <li>•	A keresztszalag pótlása során legtöbbször saját inat behúzva, kis metszésekből stabilizáljuk újra a sérült keresztszalag térdízületet. A beültetett szalagot titán implantátum, szövetbarát fémmel stabilizáljuk. A műtét 60-70 percet vesz igénybe. Itt a beteg szintén 1-2 napot tölt kórházban. Majd 3-4 hetes teljes pihentetést követően gyógytornász segítségével fokozatosan térhet vissza a mozgáshoz. </li>
+            <li>A keresztszalag pótlása során legtöbbször saját inat behúzva, kis metszésekből stabilizáljuk újra a sérült keresztszalag térdízületet. A beültetett szalagot titán implantátum, szövetbarát fémmel stabilizáljuk. A műtét 60-70 percet vesz igénybe. Itt a beteg szintén 1-2 napot tölt kórházban. Majd 3-4 hetes teljes pihentetést követően gyógytornász segítségével fokozatosan térhet vissza a mozgáshoz. </li>
           </ul>
           <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/terd-keresztszalag.jpg" alt="Arthroscopos térd anatómiai keresztszalag pótlás">
-          <p>Műtéteinket előre megtervezzük, mellyel<strong> műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető. </strong></p>
+          <p>Ezzel a módszerrel, melynek a lényege, hogy a beültetendő szalag az antómiai eredés és tapadás pontra kerüljön, <strong>a legnagyobb az esély a korábbi aktivitási szintre való visszatérésre.</strong></p>
     </div>
 
     <div class="col-lg-6 img-thumbnail">
