--- a/arthroscopos-vallsebeszet.html
+++ b/arthroscopos-vallsebeszet.html
@@ -113,13 +113,13 @@
          Mindenképpen érdemes felkeresni vele a szakorvost.</p>
       <h3>Milyen műtéteket végzünk?</h3>
       <ul>
-        <li>nyitott vállműtét</li>
+        <li>MINAR műtét, mely a kulcscsont ficam helyreállítására szolgál</li>
         <li>vállízületi ficam illetve porcsérülés miatti stabilizációs műtét</li>
         <li>vállízületi porcos gyűrűtárcsa sérülés miatti stabilizációs műtét</li>
         <li>rotátorköpeny varratműtét</li>
-        <li>rotátorköpeny szakadás></li>        
+        <li>Arthroscopos Bankart műtét a többszörösen ficamodott és instabil vállízület stabilitásának helyreállítására szolgál minimál invazív technikával.</li>        
       </ul>
-      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk és megtervezzük műtéteinket. Így a <strong>beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra </strong>tudjuk tervezni.  </p>
+      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk. Így a <strong>beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra </strong>tudjuk tervezni.  </p>
       <p>Amennyiben műtétet javasolunk, úgy az operációkat arthroscopos és minimál invazív eljárással végezzük el. Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük. A minimál invazív feltárásnak köszönhetően a szervezetet alig terhelve, végezzük el a beavatkozást, meggyorsítva ezzel a gyógyulás idejét. </p>
       <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vall-artoscope.jpg" alt="Arthroscopos vállsebészet ">
     </div>
