--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -118,9 +118,11 @@
             <li>a túlzásba vitt sportolás</li>
             <li>csípőízület veleszületett vagy fejlődési zavarai</li>
             <li>gyerekkori és serdülőkori combfej betegségek</li>
+            <li>genetikai hajlam</li>
+            <li>a csípő rostos porcos gyűrűjének (labrum) sérülése (ma már arthroscoposan helyreállítható)</li>
           </ul>
-        <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő 
-	injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, 
+        <p>Csípőízületi kopás kezelésekor - annak korai szakaszában - a kiváltó okot kezeljük gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő 
+	injekció használatával, melyet közvetlenül az ízületbe adunk be. A fentieken kívül még a nagy molekulasúlyú hyaluronsavas injekciók használatát szoktuk javasolni.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, 
 	fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás 
 	esetén, ha a fent említettek nem hoznak javulást, akkor <a class="atmenet" href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
     </div>
