--- a/csipomutetek.html
+++ b/csipomutetek.html
@@ -128,9 +128,8 @@
         <p><strong>A műtétről:</strong></p>
           <p>A revíziós protézis műtétek különböznek a primer protézisektől. Egyik oka annak, hogy a revíziós műtéteket nem 
             lehet rutin beavatkozásként említeni az, hogy a beültetett első protézis körül szinte mindig csontvesztés 
-            figyelhető meg. Ilyenkor egy átültetett csont darabbal, vagy más anyaggal erősítjük meg a mesterséges ízület 
-            körüli csontot. Ez az átültetett csontdarab származhat a beteg saját testéből, így például a medencéből, melyet 
-            a műtét során emelünk ki. Ezt hívjuk saját átültetett szövetnek.<br>
+            figyelhető meg. Ilyenkor egy átültetett csont darabbal, vagy speciális, a csont pótlására alkalmas anyaggal (Trabecular metal) erősítjük 
+            meg a csontot. Revisios műtéteknél általában speciális implantátumokat használunk. Ezt hívjuk saját átültetett szövetnek.<br>
             A műtéteink során rendszerint csont és csontvelő mintákat veszünk, melyeket bakteriológiai laboratóriumba küldünk 
             esetleges fertőzés kimutatása céljából.
           </p>
