--- a/terd-protezis-beultetes.html
+++ b/terd-protezis-beultetes.html
@@ -110,7 +110,12 @@
        <p>Ortopédiai műtéteink között leggyakoribb a meniszkusz (térd) sérülés. Tartósan túlzott igénybevétel esetén, vagy hirtelen, oldalra végzett mozdulatok során sérülhet meg e testrész. A sérülések leggyakrabban a sportolók és fizikai munkát végzők körét érinti. 
           Térdprotézis-beültetésnél a porckopástól függően tervezzük meg a műtétet.
           Részleges térdprotézisnél az érintett porcfelszín pótlásával elkerülhető, hogy teljes protézist kelljen beültetnünk.
-          Teljes térdprotézis esetében, ha a térdkalács felszíne is érintett, akkor teljes felületén indokolt a műtét.
+          Teljes térdprotézis esetében, ha a térdkalács felszíne is érintett, akkor teljes felületén indokolt a műtét.<br>
+          Az egyik leggyakoribb ortopédiai beavatkozás napjainkban a teljes térd protézis beültetés (fél protézis beültetést csak kivételes esetben végzünk), 
+          melyet lehetőség szerint minimál invazív feltárásokból végzünk. Térdprotézis beültetés  esetében különösen fontos a műtéti tervezés, melyet vagy 
+          műtéti tervező program segítségével (MediCad), vagy alsó végtagi  MR vizsgálat alapján végzünk. MR-vel végzett tervezés esetében lehetőség van a 
+          még nagyobb pontosságot biztosító egyedi térdsablon elkészítésére (Attune PSI), mely még jobb hosszú távú eredményt tud biztosítani. 
+          Ez a technika jelenleg az <a class="atmenet" href="www.emineo.hu"> Emineo magánklinikán</a> elérhető. 
         </p>
         <p><strong>A mini subvastus – izomátvágás nélküli feltárással</strong> elkerülhető az izomzat bemetszése. </p>      
         <p>Miért jobb ez a technika?</p>
