--- a/vallfajdalomrol.html
+++ b/vallfajdalomrol.html
@@ -109,11 +109,11 @@
     <div class="col-lg-6">
       <h3>Leggyakoribb okai:</h3>
       <ul>
-        <li>a nyáktömlőgyulladás (bursitis)</li>
-        <li>íngyulladás (tendinitis)</li>
-        <li>az ínszakadás</li>
-        <li>törés</li>
-        <li>arthritis (sokízületi gyulladás)</li>        
+        <li>rotátor köpeny inainak részleges vagy teljes szakadása, gyulladása</li>
+        <li>labrum (rostos porcos gyűrű) teljes vagy részleges szakadása (SLAP)</li>
+        <li>becsípődéses szindrómák</li>
+        <li>bicepsz ín gyulladása, részleges vagy teljes szakadása</li>
+        <li>kopáshoz társuló fájdalom</li>
       </ul>
       <p>A vállfájdalmak okai lehetnek a helyben kialakult elváltozások vagy egyéb területről kisugárzó fájdalmak. Kisugárzó fájdalmat okozhat a nyaki gerinc kopásos elváltozása. Ekkor a fájdalom a fej mozgatásakor erősödik. </p>
       <p>Életkortól függően, 20-35 éves kor közötti sportolóknál, az elakadási szindrómák fordulnak elő gyakrabban. A 40-55 év közöttieknél már az ízületek körül kialakulhatnak meszesedések, ezek okozzák a problémát. Az 55 év feletti korosztályra az izomszakadás a jellemző, mely erős vállfájdalommal.</p>
