--- a/terd-protezis-csere.html
+++ b/terd-protezis-csere.html
@@ -121,8 +121,7 @@
            Majd eltávolítjuk az eredeti protézist. A műtét során rendszerint szöveti, csont és csontvelő mintát veszünk, 
            melyet laboratóriumi vizsgálatra küldünk, az esetleges fertőzés kimutatására. A revíziós műtétek nem rutin 
            beavatkozások. Ezek a beavatkozások megnövekedett műtéti időt, speciális műszerezettséget és sok esetben megnyúlt 
-           rehabilitációt is eredményeznek. A feltárási technikát előre megtervezzük, mellyel <strong>műtéteink sikeressége, betegeink 
-           panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető.</strong>
+           rehabilitációt is eredményeznek. Megtervezzük a beültetendő protézis minél jobb helyzetét, a használandó revisios protézis típusát.
            Az Emineo budapesti magánkórházzal együttműködve rendelkezésre áll az MRI alapján készült egyedi (Zimmer PSI) 
            sablonnal beültethető térdprotézis is. Itt tervezzük meg a mozgásanalízisre épülő csípő és teljesen egyedi térdprotézis beültetést is.
           </p>
