--- a/arthroscopos-vallsebeszet.html
+++ b/arthroscopos-vallsebeszet.html
@@ -119,7 +119,7 @@
         <li>rotátorköpeny varratműtét</li>
         <li>Arthroscopos Bankart műtét a többszörösen ficamodott és instabil vállízület stabilitásának helyreállítására szolgál minimál invazív technikával.</li>        
       </ul>
-      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk. Így a <strong>beavatkozások sikerességét és a betegek gyógyulását 80 százalékról 95 százalékra </strong>tudjuk tervezni.  </p>
+      <p>Nem szükséges minden vállfájdalmat megoperálni, de ha mégis, akkor a vállsebészetben is innovatív eszközöket alkalmazzuk.</p>
       <p>Amennyiben műtétet javasolunk, úgy az operációkat arthroscopos és minimál invazív eljárással végezzük el. Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük. A minimál invazív feltárásnak köszönhetően a szervezetet alig terhelve, végezzük el a beavatkozást, meggyorsítva ezzel a gyógyulás idejét. </p>
       <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/vall-artoscope.jpg" alt="Arthroscopos vállsebészet ">
     </div>
@@ -130,7 +130,7 @@
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
           <p><strong>Szekszárd</strong>, Kadarka u. 72. <br>
-            2020. október 1-jétől <br>
+            
             minden páros héten hétfőn  16.00–20.00 óráig <br>
             minden pénteken 13.00–17.00 óráig</p>
 		  <p><strong>Baja</strong>, Alkotmány u. 1.<br>
