--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -121,10 +121,11 @@
             <li>genetikai hajlam</li>
             <li>a csípő rostos porcos gyűrűjének (labrum) sérülése (ma már arthroscoposan helyreállítható)</li>
           </ul>
-        <p>Csípőízületi kopás kezelésekor - annak korai szakaszában - a kiváltó okot kezeljük gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő 
-	injekció használatával, melyet közvetlenül az ízületbe adunk be. A fentieken kívül még a nagy molekulasúlyú hyaluronsavas injekciók használatát szoktuk javasolni.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, 
-	fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás 
-	esetén, ha a fent említettek nem hoznak javulást, akkor <a class="atmenet" href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
+        <p> Csípőízületi kopás korai szakaszában a kiváltó okot kezeljük gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció 
+            használatával, melyet közvetlenül az ízületbe adunk be. További kezelésként még a nagy molekulasúlyú hyaluronsavas injekciók használatát 
+            szoktuk javasolni. A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a 
+            panaszokat, de a folyamat hosszú távon sajnos nem állítható meg.  Előrehaladott csípőízületi porckopás esetén, ha a fent 
+	          említettek nem hoznak javulást, akkor <a class="atmenet" href="izomatvagas-nelkul.html"> csípő protézis beültetése </a>javasolt.</p>
     </div>
 
     <div class="col-lg-6 img-thumbnail">
@@ -133,7 +134,7 @@
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
           <p><strong>Szekszárd</strong>, Kadarka u. 72. <br>
-            2020. október 1-jétől <br>
+            
             minden páros héten hétfőn  16.00–20.00 óráig <br>
             minden pénteken 13.00–17.00 óráig</p>
 		  <p><strong>Baja</strong>, Alkotmány u. 1.<br>
