--- a/index.html
+++ b/index.html
@@ -97,39 +97,38 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('pictures/csipofajdalom.jpg')">
+        <div class="carousel-item active" style="background-image: url('pictures/slide-1.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>Csipő</h2>
-            <p class="slideshow-p"> Innovatív eljárással a kórházban töltött idő felére csökken</p>
+            <h2>CORIN OPS</h2>
+            <p class="slideshow-p">A legújabb Optimized Position System technológiát alkalmazzuk csípőműtéteinknél</p> 
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/terd-szorit.jpg')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-2.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>Térd</h2>
-            <p class="slideshow-p">Minimál invazív technológiával a műtéti fájdalom minimális.</p>
+            <h2>SUB ROSA</h2>
+            <p class="slideshow-p">Szekszárdon a város újonnan nyílt egészségközpontjában várom pácienseimet</p> 
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-3.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>Váll</h2>
-            <p class="slideshow-p">Okos-eszközökkel a műtét sikeressége 95 %-ra tervezhető</p>
+            <h2>IZOMÁTVÁGÁS NÉLÜL</h2>
+            <p class="slideshow-p"></p> 
           </div>
         </div>
         <!-- Slide Four - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-4.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>Váll</h2>
-            <p class="slideshow-p">Nincs izomátvágás - akár két hét után visszatérhet munkájához</p>
+            <h2>TÉRDPROTÉZIS BEÜLTETÉS</h2>
+            <p class="slideshow-p"></p> 
           </div>
         </div>
         <!-- Slide Five - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-5.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>Váll</h2>
-            <p class="slideshow-p">Egyénre szabott protézisek - a hosszú távú eredményességért</p>
-          </div>
+            <h2>ARTHROSCOPOS VÁLLMŰTÉT</h2>
+            <p class="slideshow-p"></p>           </div>
         </div>
 
 
@@ -233,7 +232,7 @@
               <h3 class="open-hours atmenet"><a href="kapcsolat.html">Szekszárd</a> </h3>
               <p>Sub Rosa Egészségközpont,<br> 
                 Szekszárd, Kadarka u. 72.<br>
-                (2020. október 1-jétől) <br>
+
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
               </p>
