--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -110,7 +110,7 @@
         </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4">
-          <h3>Szekszárd - Sub Rosa Egészség Központ</h3>
+          <h3>Szekszárd - Sub Rosa Egészségközpont</h3>
           <p>
             7100 Szekszárd Kadarka u. 72.
             <br>
@@ -118,13 +118,17 @@
           <p> Telefon: <a href="tel:+36303312262">+36 30/331-2262</a> </p>
           <p> E-mail: <a href="mailto:ganczerp@me.com">ganczerp@me.com</a> </p>
           <p> Rendelési idő:<br>
-            (2020. október 1-jétől) <br>
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
           </p>
         </div>
       </div>
+      <div class="container">
+        <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/sub-rosa-egeszsegkozpont.png" alt="Sub Rosa Egészségközpont">
+      </div>
       <!-- /. SZekszárd vége -->
+
+
 
       <!-- Elválasztó sáv-->
       <div class="row separator">     
