--- a/index.html
+++ b/index.html
@@ -97,38 +97,39 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('pictures/slide-1.png')">
+        <div class="carousel-item active" style="background-image: url('pictures/slide-1.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>CORIN OPS</h2>
-            <p class="slideshow-p">A legújabb Optimized Position System technológiát alkalmazzuk csípőműtéteinknél</p> 
+            <p class="slideshow-p">A legújabb Optimized Position System technológiát alkalmazzuk csípőműtéteinknél.</p> 
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/slide-2.png')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-2.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>SUB ROSA</h2>
-            <p class="slideshow-p">Szekszárdon a város újonnan nyílt egészségközpontjában várom pácienseimet</p> 
+            <p class="slideshow-p">Szekszárdon a város újonnan nyílt egészségközpontjában várom pácienseimet.</p> 
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/slide-3.png')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-3.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>IZOMÁTVÁGÁS NÉLÜL</h2>
-            <p class="slideshow-p"></p> 
+            <p class="slideshow-p">Térd és csípő protézis beültetést minimál invazív technikával végzünk a gyorsabb gyógyulásért.</p> 
           </div>
         </div>
         <!-- Slide Four - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/slide-4.png')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-4.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>TÉRDPROTÉZIS BEÜLTETÉS</h2>
-            <p class="slideshow-p"></p> 
+            <p class="slideshow-p">A mini subvastus - izomátvágás nélküli feltárással elkerülhető az izomzat bemetszése.</p> 
           </div>
         </div>
         <!-- Slide Five - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/slide-5.png')">
+        <div class="carousel-item" style="background-image: url('pictures/slide-5.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>ARTHROSCOPOS VÁLLMŰTÉT</h2>
-            <p class="slideshow-p"></p>           </div>
+            <p class="slideshow-p">Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük.</p>
+          </div>
         </div>
 
 
@@ -155,17 +156,21 @@
 
     <!-- Intro Content -->
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-2">
+      </div>
+      <div class="col-lg-4  align-items-center">
         <p><a href="bemutatkozas.html">
-          <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
+          <img src="pictures/dr-ganczer-peter-jobb.png" alt="Dr. Ganczer Péter">
         </a></p>  
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-2">
+      </div>
+      <div class="col-lg-4">
         
-        <p><a class="atmenet" href="bemutatkozas.html">Dr. Ganczer Péter</a> ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong>.</p>
+        <p><br><br><a class="atmenet" href="bemutatkozas.html">Dr. Ganczer Péter</a> ortopéd-traumatológus szakorvos vagyok. Szakterületem a <strong>térd, csípő és vállsebészet</strong>.</p>
         <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
            Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
-           végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong>
+           végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong> <br> <br>
            A szekszárdi Kórház <strong>ortopédiai osztályának vezetőjeként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
            vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. Mindezt olyan új számítógépes tervezőprogram segítségével,  
            mellyel <strong>jobb eredményt és hosszabb protézis élettartamot lehet elérni. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
