--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -113,19 +113,19 @@
           <h3>Szekszárd - Sub Rosa Egészségközpont</h3>
           <p>
             7100 Szekszárd Kadarka u. 72.
-            <br>
           </p>
-          <p> Telefon: <a href="tel:+36303312262">+36 30/331-2262</a> </p>
+          <p> Telefon: <a href="tel:+36303312262">+36 30/331-2262</a> <br>
           <p> E-mail: <a href="mailto:ganczerp@me.com">ganczerp@me.com</a> </p>
           <p> Rendelési idő:<br>
                 minden páros héten hétfőn  16.00–20.00 óráig <br>
                 minden pénteken 13.00–17.00 óráig <br>
           </p>
+          <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/sub-rosa-egeszsegkozpont.png" alt="Sub Rosa Egészségközpont">  
         </div>
       </div>
-      <div class="container">
+      <!-- <div class="container">
         <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/sub-rosa-egeszsegkozpont.png" alt="Sub Rosa Egészségközpont">
-      </div>
+      </div> -->
       <!-- /. SZekszárd vége -->
 
 
