Egy uj kepet tettem be,

--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -120,7 +120,7 @@
 
     </div>
     <div class="col-lg-6">
-      <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter-bal.png" alt="Dr. Ganczer Péter">
+      <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
     </div>
 
 <!-- <div class="col-lg-12">
